--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -1,30 +1,114 @@
 {% load static %}
+{% include 'accounts/login.html' %}
+<!DOCTYPE HTML>
+<html>
 
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Room Booking</title>
-    <!-- Bootstrap CDN -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css">
-    <!-- <link rel="stylesheet" href="{% static 'style.css' %}">  -->
+    <title>TMS | Tourism Management System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+    <script
+        type="applijewelleryion/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <link href="{% static 'css/bootstrap.css' %}" rel='stylesheet' type='text/css' />
+    <link href="{% static 'css/style.css' %}" rel='stylesheet' type='text/css' />
+    <link href='//fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto+Condensed:400,700,300' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
+    <link href="{% static 'css/font-awesome.css' %}" rel="stylesheet">
+    <!-- Custom Theme files -->
+    <script src="{% static 'js/jquery-1.12.0.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+    <!--animate-->
+    <link href="{% static 'css/animate.css' %}" rel="stylesheet" type="text/css" media="all">
+    <script src="{% static 'js/wow.min.js' %}"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <!--//end-animate-->
 </head>
+
 <body>
-    <div class="container" id="container">
-        
-        <!-- Main content with form -->
-        {% block content %}
-            
-        {% endblock %}
+    {% if user.is_authenticated %}
+    <div class="top-header">
+        <div class="container">
+            <ul class="tp-hd-lft wow fadeInLeft animated" data-wow-delay=".5s">
+                <li class="hm"><a href="{% url 'rentals:home' %}"><i class="fa fa-home"></i></a></li>
+                <li class="prnt"><a href="#">My Profile</a></li>
+                <li class="prnt"><a href="#">Change Password</a></li>
+                <li class="prnt"><a href="#">My Tour History</a></li>
+                <li class="prnt"><a href="#">Issue Tickets</a></li>
+            </ul>
+            <ul class="tp-hd-rgt wow fadeInRight animated" data-wow-delay=".5s">
+                <li class="tol">Welcome :</li>
+                <li class="sig">{{ user.username }}</li>
+                <li class="sigi"><a href="#">Logout</a></li>
+            </ul>
+            <div class="clearfix"></div>
+        </div>
     </div>
-    <!-- <script src="{% static 'https://code.jquery.com/jquery-3.6.0.min.js' %}"></script> -->
-    <!-- <script src="script.js"></script> -->
-    <!-- <script src="js/bootstrap.bundle.min.js"></script> -->
-	<!-- <script src="js/tiny-slider.js"></script> -->
-	<!-- <script src="{% static 'js/custom.js' %}"></script> -->
+    {% else %}
+    <div class="top-header">
+        <div class="container">
+            <ul class="tp-hd-lft wow fadeInLeft animated" data-wow-delay=".5s">
+                <li class="hm"><a href="{% url 'rentals:home' %}"><i class="fa fa-home"></i></a></li>
+                <li class="hm"><a href="#">Admin Login</a></li>
+            </ul>
+            <ul class="tp-hd-rgt wow fadeInRight animated" data-wow-delay=".5s">
+                <li class="tol">Toll Number : 123-4568790</li>
+                <li class="sig"><a href="{% url 'accounts:signup' %}" >Sign Up</a></li>
+                <li class="sigi"><a href="#" data-toggle="modal" data-target="#myModal4">Sign In</a></li>
+            </ul>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    {% endif %}
+
+    <div class="header">
+        <div class="container">
+            <div class="logo wow fadeInDown animated" data-wow-delay=".5s">
+                <a href="{% url 'rentals:home' %}">Tourism <span>Management System</span></a>
+            </div>
+
+            <div class="lock fadeInDown animated" data-wow-delay=".5s">
+                <li><i class="fa fa-lock"></i></li>
+                <li>
+                    <div class="securetxt">SAFE &amp; SECURE </div>
+                </li>
+                <div class="clearfix"></div>
+            </div>
+            <div class="clearfix"></div>
+        </div>
+    </div>
+    {% for message in messages %}
+      <div class="alert alert-{{message.tags}} alert-dismissible fade show" role="alert">
+        <strong style="color: #14dd25;">{{message}}</strong> 
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      </div>
+    {% endfor %}
+    <!-- Main content with form -->
+    {% block content %}
+
+    {% endblock %}
+
+    <div class="copy-right">
+        <div class="container">
+
+            <div class="footer-social-icons wow fadeInDown animated animated" data-wow-delay=".5s"
+                style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">
+                <ul>
+                    <li><a class="facebook" href="#"><span>Facebook</span></a></li>
+                    <li><a class="twitter" href="#"><span>Twitter</span></a></li>
+                    <li><a class="flickr" href="#"><span>Flickr</span></a></li>
+                    <li><a class="googleplus" href="#"><span>Google+</span></a></li>
+                    <li><a class="dribbble" href="#"><span>Dribbble</span></a></li>
+                </ul>
+            </div>
+            <p class="wow zoomIn animated animated" data-wow-delay=".5s"
+                style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;">© 2020 TMS . All Rights
+                Reserved </p>
+        </div>
+    </div>
 </body>
+
 </html>
