modified database and added detail temp

--- a/rental_app/templates/app/index.html
+++ b/rental_app/templates/app/index.html
@@ -2,13 +2,7 @@
 
 {% block content %}
 
-<div class="banner">
-    <div class="container">
-        <h1 class="wow zoomIn animated animated" data-wow-delay=".5s"
-            style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;"> TMS - Tourism Management System
-        </h1>
-    </div>
-</div>
+
 
 
 <!--- rupes ---->
@@ -88,7 +82,7 @@
                 <h5>KSH
                     {{room.rent}}
                 </h5>
-                <a href="#"
+                <a href="{% url 'rentals:room' room.id %}"
                     class="view">Details</a>
             </div>
             <div class="clearfix"></div>
