--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -85,7 +85,13 @@
             <div class="clearfix"></div>
         </div>
     </div>
-
+    <div class="banner">
+        <div class="container">
+            <h1 class="wow zoomIn animated animated" data-wow-delay=".5s"
+                style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;"> TMS - Tourism Management System
+            </h1>
+        </div>
+    </div>
     <!-- Main content with form -->
     {% block content %}
 
