--- a/rental_app/templates/app/index.html
+++ b/rental_app/templates/app/index.html
@@ -61,8 +61,7 @@
         {% for room in rooms %}
         <div class="rom-btm">
             <div class="col-md-3 room-left wow fadeInLeft animated" data-wow-delay=".5s">
-                <img src="/media/{{ room.image }}" class="img-responsive"
-                    alt="">
+                <img src="/media/{{ room.image }}" class="img-responsive" alt="">
             </div>
             <div class="col-md-6 room-midle wow fadeInUp animated" data-wow-delay=".5s">
                 <h4>Room Name:
@@ -71,8 +70,8 @@
                 <h6>Room Type :
                     {{room.room_type}}
                 </h6>
-                <p><b>Appartment Location :</b>
-                    {{room.apartment.location}}
+                <p><b>Rate charged :</b>
+                    {{room.rate}}
                 </p>
                 <p><b>Facilities : </b>
                     {{room.apartment.facilities}}
@@ -82,15 +81,14 @@
                 <h5>KSH
                     {{room.rent}}
                 </h5>
-                <a href="{% url 'rentals:room' room.id %}"
-                    class="view">Details</a>
+                <a href="{% url 'rentals:room' room.id %}" class="view">Details</a>
             </div>
             <div class="clearfix"></div>
         </div>
         {% empty %}
         <h3> No room available </h3>
         {% endfor %}
-        <div><a href="#" class="view">View More Vacants</a></div>
+        <div><a href="{% url 'rentals:rooms' %}" class="view">View More Vacants</a></div>
     </div>
     <div class="clearfix"></div>
 </div>
