--- a/rental_app/templates/app/index.html
+++ b/rental_app/templates/app/index.html
@@ -3,7 +3,13 @@
 {% block content %}
 
 
-
+<div class="banner">
+    <div class="container">
+        <h1 class="wow zoomIn animated animated" data-wow-delay=".5s"
+            style="visibility: visible; animation-delay: 0.5s; animation-name: zoomIn;"> TMS - Tourism Management System
+        </h1>
+    </div>
+</div>
 
 <!--- rupes ---->
 <div class="container">
