--- a/rental_app/templates/app/detail_page.html
+++ b/rental_app/templates/app/detail_page.html
@@ -3,51 +3,55 @@
 {% block content %}
 <div class="selectroom">
     <div class="container">
-                <form name="book" method="post">
-                    <div class="selectroom_top">
-                        <div class="col-md-4 selectroom_left wow fadeInLeft animated" data-wow-delay=".5s">
-                            <img src="/media/{{ room.image }}" class="img-responsive" alt="">
-                        </div>
-                        <div class="col-md-8 selectroom_right wow fadeInRight animated" data-wow-delay=".5s">
-                            <h2>{{room.apartment.apartment_name}} Appartment</h2>
-                            <p class="dow">#{{room.room_number}}</p>
-                            <p><b>Room Type :</b> {{room.room_type}}</p>
-                            <p><b>Package Location :</b> {{room.apartment.location}}</p>
-                            <p><b>Free Features</b> {{room.apartment.facilities}}</p>
-                            <div class="clearfix"></div>
-                            <div class="grand">
-                                <p>Rent {{room.rate}}</p>
-                                <h3>{{room.rent}}</h3>
-                            </div>
-                        </div>
-                        <a href="{% url 'rentals:apartment' room.apartment.id %}" class="view">{{room.apartment.apartment_name}}'s Details</a>
+        <form name="book" method="post">
+            {% csrf_token %}
+            <div class="selectroom_top">
+                <div class="col-md-4 selectroom_left wow fadeInLeft animated" data-wow-delay=".5s">
+                    <img src="/media/{{ room.image }}" class="img-responsive" alt="">
+                </div>
+                <div class="col-md-8 selectroom_right wow fadeInRight animated" data-wow-delay=".5s">
+                    <h2>{{room.apartment.apartment_name}} Appartment</h2>
+                    <p class="dow">#{{room.room_number}}</p>
+                    <p><b>Room Type :</b> {{room.room_type}}</p>
+                    <p><b>Package Location :</b> {{room.apartment.location}}</p>
+                    <p><b>Free Features</b> {{room.apartment.facilities}}</p>
+                    <div class="clearfix"></div>
+                    <div class="grand">
+                        <p>Rent {{room.rate}}</p>
+                        <h3>{{room.rent}}</h3>
+                    </div>
+                </div>
+                <a href="{% url 'rentals:apartment' room.apartment.id %}"
+                    class="view">{{room.apartment.apartment_name}}'s Details</a>
+                <div class="clearfix"></div>
+            </div>
+            {% if room.booked %}
+
+            {% else %}
+            <div class="selectroom_top">
+                <div class="selectroom-info animated wow fadeInUp animated" data-wow-duration="1200ms"
+                    data-wow-delay="500ms"
+                    style="visibility: visible; animation-duration: 1200ms; animation-delay: 500ms; animation-name: fadeInUp; margin-top: -70px">
+                    <ul>
+                        {% if user.is_authenticated and user.role == "Prospective tenant" %}
+                        <li class="spe" align="center">
+                            <button type="submit" name="submit2" class="btn-primary btn">Book This Room</button>
+                        </li>
+                        {%else%}
+                        <li class="sigi" align="center" style="margin-top: 1%">
+                            <a href="#" data-toggle="modal" data-target="#myModal4" class="btn-primary btn"> Book This
+                                Room</a>
+                        </li>
+                        {% endif %}
                         <div class="clearfix"></div>
-                    </div>
-                    <div class="selectroom_top">
-                        <h2>Travels</h2>
-                        <div class="selectroom-info animated wow fadeInUp animated" data-wow-duration="1200ms" data-wow-delay="500ms" style="visibility: visible; animation-duration: 1200ms; animation-delay: 500ms; animation-name: fadeInUp; margin-top: -70px">
-                            <ul>
+                    </ul>
+                </div>
 
-                                <li class="spe">
-                                    <label class="inputLabel">Comment</label>
-                                    <input class="special" type="text" name="comment" required="">
-                                </li>
-                                {% if user.is_authenticated %}
-                                    <li class="spe" align="center">
-                                        <button type="submit" name="submit2" class="btn-primary btn">Book</button>
-                                    </li>
-                                {%else%}
-                                    <li class="sigi" align="center" style="margin-top: 1%">
-                                        <a href="#" data-toggle="modal" data-target="#myModal4" class="btn-primary btn"> Book</a>
-                                    </li>
-                                {% endif %}
-                                <div class="clearfix"></div>
-                            </ul>
-                        </div>
+            </div>
+            {% endif %}
 
-                    </div>
-                </form>
-        
+        </form>
+
 
 
     </div>
