--- a/rental_app/templates/app/booking-history.html
+++ b/rental_app/templates/app/booking-history.html
@@ -4,7 +4,7 @@
 <div class="privacy">
     <div class="container">
         <h3 class="wow fadeInDown animated animated" data-wow-delay=".5s"
-            style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">My Tour History</h3>
+            style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">My Booking History</h3>
         <form name="chngpwd" method="post" onSubmit="return valid();">
             <table border="1" width="100%">
                 <tr align="center">
@@ -15,22 +15,40 @@
                     <th>Booking Date</th>
                     <th>Action</th>
                 </tr>
-                {% for in %}
-
-                {% endfor %}
+                {% for history in histories %}
                 <tr align="center">
-                    <td></td>
-                    <td>#BK</td>
+                    <td>{{forloop.counter}}</td>
+                    <td>#BK{{history.id}}</td>
                     <td>
-                        <a href="package-details.php?pkgid=<?php echo htmlentities($result->pkgid);?>">
-                            <?php echo htmlentities($result->packagename);?>
+                        
+                        {% if history.room %}
+                            <a href="{% url 'rentals:room' history.room.id %}">
+                            {{history.room.room_number}}
                         </a>
+                        {% else %}
+                            The room was deleted/removed
+                        {% endif %}
+                            
+                        
                     </td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
+                    <td>
+                        {% if history.room %}
+                            {% if history.room.booked %}
+                                Booked
+                            {% else %}
+                                Vacant
+                            {% endif %}
+                                
+                        {% else %}
+                            The room was deleted/removed
+                        {% endif %}
+                    </td>
+                    <td>{{history.date_booked}}</td>
+                    <td><a href="#">delete from list</a></td>
 
                 </tr>
+                {% endfor %}
+
             </table>
 
             </p>
