--- a/rental_app/templates/app/detail_page.html
+++ b/rental_app/templates/app/detail_page.html
@@ -18,7 +18,7 @@
                     <div class="clearfix"></div>
                     <div class="grand">
                         <p>Rent {{room.rate}}</p>
-                        <h3>{{room.rent}}</h3>
+                        <h3>KSH {{room.rent}}</h3>
                     </div>
                 </div>
                 <a href="{% url 'rentals:apartment' room.apartment.id %}"
