update and delete

--- a/rental_app/templates/app/add_room.html
+++ b/rental_app/templates/app/add_room.html
@@ -7,15 +7,12 @@
             style="visibility: visible; animation-delay: 0.5s; animation-name: fadeInDown;">Add Room</h3>
         <form name="chngpwd" method="post" enctype="multipart/form-data">
             {% csrf_token %}
-            {% if mode == 'apartment' %}
-                {{form.as_p}}
-            {% else %}
-                {{form.as_p}}
-            {% endif %}
-            <p style="width: 350px;">
+            
+            {{form.as_p}}
+            <!-- <p style="width: 350px;">
                 <label for="inputZip" class="form-label">Image: </label>
                 <input type="file" class="form-control" id="inputZip" name="image">
-            </p>
+            </p> -->
             <p style="width: 100%;">
                 <button type="submit" name="submit5" class="btn-primary btn">Add</button>
             </p>
