--- a/rental_app/templates/app/apartment.html
+++ b/rental_app/templates/app/apartment.html
@@ -30,7 +30,7 @@
                  <a href="{% url 'rentals:add-room' apartment.id %}"
                     class="view">Add room to this apartment</a>
 
-                 <a href="#"
+                 <a href="{% url 'rentals:delete-apartment' apartment.id %}"
                     class="view" style="background-color: red;">Delete this apartment</a>
                 
                 {% endif %}
