custom admin files

--- a/rental_app/templates/base.html
+++ b/rental_app/templates/base.html
@@ -68,7 +68,7 @@
         <div class="container">
             <ul class="tp-hd-lft wow fadeInLeft animated" data-wow-delay=".5s">
                 <li class="hm"><a href="{% url 'accounts:home' %}"><i class="fa fa-home"></i></a></li>
-                <li class="hm"><a href="#">Admin Login</a></li>
+                <li class="hm"><a href="{% url 'custom_admin:login' %}">Admin Login</a></li>
             </ul>
             <ul class="tp-hd-rgt wow fadeInRight animated" data-wow-delay=".5s">
                 <li class="tol">Toll Number : 123-4568790</li>
